armv7a: add build-system support for ARM
This patch adds support for an armv7a soft-float (no FPU) GCC
toolchain using uClibc.

The ARM platform is following the PowerPC model of using U-Boot with a
kernel, initramfs and dtb file in a .itb U-Boot image file.

In several areas the build system is refactor to treat PowerPC and ARM
in a similar manner.

--- a/build-config/conf/crosstool/gcc-4.9.2/uClibc-0.9.33.2/crosstool.armv7a.config
+++ b/build-config/conf/crosstool/gcc-4.9.2/uClibc-0.9.33.2/crosstool.armv7a.config
@@ -1,9 +1,11 @@
 #
 # Automatically generated make config: don't edit
-# crosstool-NG 1.19.0 Configuration
-# Thu Jul 24 10:37:28 2014
+# crosstool-NG 1.21.0 Configuration
+# Tue Sep  1 11:52:57 2015
 #
+CT_CONFIGURE_has_make381=y
 CT_CONFIGURE_has_xz=y
+CT_CONFIGURE_has_svn=y
 CT_MODULES=y
 
 #
@@ -15,6 +17,7 @@ CT_MODULES=y
 #
 # CT_OBSOLETE is not set
 CT_EXPERIMENTAL=y
+# CT_EXPERIMENTAL_PATCHES is not set
 # CT_ALLOW_BUILD_AS_ROOT is not set
 # CT_DEBUG_CT is not set
 
@@ -86,17 +89,26 @@ CT_LOG_FILE_COMPRESS=y
 #
 # Target options
 #
-CT_ARCH="powerpc"
+CT_ARCH="arm"
+CT_ARCH_SUPPORTS_BOTH_MMU=y
+CT_ARCH_SUPPORTS_BOTH_ENDIAN=y
 CT_ARCH_SUPPORTS_32=y
 CT_ARCH_SUPPORTS_64=y
 CT_ARCH_SUPPORTS_WITH_ARCH=y
 CT_ARCH_SUPPORTS_WITH_CPU=y
 CT_ARCH_SUPPORTS_WITH_TUNE=y
 CT_ARCH_SUPPORTS_WITH_FLOAT=y
+CT_ARCH_SUPPORTS_WITH_FPU=y
+CT_ARCH_SUPPORTS_SOFTFP=y
+CT_ARCH_DEFAULT_HAS_MMU=y
+CT_ARCH_DEFAULT_LE=y
 CT_ARCH_DEFAULT_32=y
-CT_ARCH_ARCH=""
-CT_ARCH_CPU=""
-CT_ARCH_TUNE=""
+CT_ARCH_ARCH="armv7-a"
+CT_ARCH_CPU="cortex-a9"
+CT_ARCH_TUNE="cortex-a9"
+CT_ARCH_FPU=""
+# CT_ARCH_BE is not set
+CT_ARCH_LE=y
 CT_ARCH_32=y
 # CT_ARCH_64 is not set
 CT_ARCH_BITNESS=32
@@ -105,13 +117,14 @@ CT_ARCH_FLOAT_SW=y
 CT_TARGET_CFLAGS=""
 CT_TARGET_LDFLAGS=""
 # CT_ARCH_alpha is not set
-# CT_ARCH_arm is not set
+CT_ARCH_arm=y
 # CT_ARCH_avr32 is not set
 # CT_ARCH_blackfin is not set
 # CT_ARCH_m68k is not set
 # CT_ARCH_microblaze is not set
 # CT_ARCH_mips is not set
-CT_ARCH_powerpc=y
+# CT_ARCH_nios2 is not set
+# CT_ARCH_powerpc is not set
 # CT_ARCH_s390 is not set
 # CT_ARCH_sh is not set
 # CT_ARCH_sparc is not set
@@ -123,6 +136,7 @@ CT_ARCH_blackfin_AVAILABLE=y
 CT_ARCH_m68k_AVAILABLE=y
 CT_ARCH_microblaze_AVAILABLE=y
 CT_ARCH_mips_AVAILABLE=y
+CT_ARCH_nios2_AVAILABLE=y
 CT_ARCH_powerpc_AVAILABLE=y
 CT_ARCH_s390_AVAILABLE=y
 CT_ARCH_sh_AVAILABLE=y
@@ -135,18 +149,24 @@ CT_ARCH_SUFFIX=""
 #
 # CT_MULTILIB is not set
 CT_ARCH_USE_MMU=y
+CT_ARCH_ENDIAN="little"
 
 #
 # Target optimisations
 #
+# CT_ARCH_FLOAT_AUTO is not set
+# CT_ARCH_FLOAT_SOFTFP is not set
 CT_ARCH_FLOAT="soft"
 
 #
-# powerpc other options
+# arm other options
 #
-CT_ARCH_powerpc_ABI=""
-CT_ARCH_powerpc_ABI_DEFAULT=y
-# CT_ARCH_powerpc_ABI_SPE is not set
+CT_ARCH_ARM_MODE="arm"
+CT_ARCH_ARM_MODE_ARM=y
+# CT_ARCH_ARM_MODE_THUMB is not set
+# CT_ARCH_ARM_INTERWORKING is not set
+CT_ARCH_ARM_EABI_FORCE=y
+CT_ARCH_ARM_EABI=y
 
 #
 # Toolchain options
@@ -169,7 +189,7 @@ CT_TOOLCHAIN_BUGURL=""
 #
 CT_TARGET_VENDOR="onie"
 CT_TARGET_ALIAS_SED_EXPR=""
-CT_TARGET_ALIAS="powerpc-softfloat"
+CT_TARGET_ALIAS="armv7a"
 
 #
 # Toolchain type
@@ -200,28 +220,17 @@ CT_KERNEL="linux"
 CT_KERNEL_VERSION="custom"
 # CT_KERNEL_bare_metal is not set
 CT_KERNEL_linux=y
-# CT_KERNEL_windows is not set
 CT_KERNEL_bare_metal_AVAILABLE=y
 CT_KERNEL_linux_AVAILABLE=y
+# CT_KERNEL_V_4_0 is not set
+# CT_KERNEL_V_3_19 is not set
+# CT_KERNEL_V_3_18 is not set
+# CT_KERNEL_V_3_14 is not set
+# CT_KERNEL_V_3_12 is not set
 # CT_KERNEL_V_3_10 is not set
-# CT_KERNEL_V_3_9 is not set
-# CT_KERNEL_V_3_8 is not set
-# CT_KERNEL_V_3_7 is not set
-# CT_KERNEL_V_3_6 is not set
-# CT_KERNEL_V_3_5 is not set
 # CT_KERNEL_V_3_4 is not set
-# CT_KERNEL_V_3_3 is not set
 # CT_KERNEL_V_3_2 is not set
-# CT_KERNEL_V_3_1 is not set
-# CT_KERNEL_V_3_0 is not set
-# CT_KERNEL_V_2_6_39 is not set
-# CT_KERNEL_V_2_6_38 is not set
-# CT_KERNEL_V_2_6_37 is not set
-# CT_KERNEL_V_2_6_36 is not set
-# CT_KERNEL_V_2_6_33 is not set
 # CT_KERNEL_V_2_6_32 is not set
-# CT_KERNEL_V_2_6_31 is not set
-# CT_KERNEL_V_2_6_27 is not set
 CT_KERNEL_LINUX_CUSTOM=y
 CT_KERNEL_LINUX_CUSTOM_LOCATION="${DOWNLOADDIR}/${LINUX_TARBALL}"
 CT_KERNEL_windows_AVAILABLE=y
@@ -250,15 +259,22 @@ CT_BINUTILS_binutils=y
 #
 # GNU binutils
 #
+# CT_CC_BINUTILS_SHOW_LINARO is not set
+CT_BINUTILS_V_2_25=y
+# CT_BINUTILS_V_2_24 is not set
+# CT_BINUTILS_V_2_23_2 is not set
 # CT_BINUTILS_V_2_23_1 is not set
-CT_BINUTILS_V_2_22=y
+# CT_BINUTILS_V_2_22 is not set
 # CT_BINUTILS_V_2_21_53 is not set
 # CT_BINUTILS_V_2_21_1a is not set
 # CT_BINUTILS_V_2_20_1a is not set
 # CT_BINUTILS_V_2_19_1a is not set
 # CT_BINUTILS_V_2_18a is not set
 # CT_BINUTILS_CUSTOM is not set
-CT_BINUTILS_VERSION="2.22"
+CT_BINUTILS_VERSION="2.25"
+CT_BINUTILS_2_25_or_later=y
+CT_BINUTILS_2_24_or_later=y
+CT_BINUTILS_2_23_or_later=y
 CT_BINUTILS_2_22_or_later=y
 CT_BINUTILS_2_21_or_later=y
 CT_BINUTILS_2_20_or_later=y
@@ -276,7 +292,7 @@ CT_BINUTILS_LINKER_LD=y
 CT_BINUTILS_LINKERS_LIST="ld"
 CT_BINUTILS_LINKER_DEFAULT="bfd"
 # CT_BINUTILS_PLUGINS is not set
-CT_BINUTILS_EXTRA_CONFIG_ARRAY="--enable-64-bit-bfd"
+CT_BINUTILS_EXTRA_CONFIG_ARRAY=""
 CT_BINUTILS_FOR_TARGET=y
 CT_BINUTILS_FOR_TARGET_IBERTY=y
 CT_BINUTILS_FOR_TARGET_BFD=y
@@ -286,18 +302,86 @@ CT_BINUTILS_FOR_TARGET_BFD=y
 #
 
 #
+# C-library
+#
+CT_LIBC="uClibc"
+CT_LIBC_VERSION="0.9.33.2"
+# CT_LIBC_glibc is not set
+# CT_LIBC_musl is not set
+CT_LIBC_uClibc=y
+CT_LIBC_glibc_AVAILABLE=y
+CT_THREADS="nptl"
+CT_LIBC_mingw_AVAILABLE=y
+CT_LIBC_musl_AVAILABLE=y
+CT_LIBC_newlib_AVAILABLE=y
+CT_LIBC_none_AVAILABLE=y
+CT_LIBC_uClibc_AVAILABLE=y
+CT_LIBC_UCLIBC_V_0_9_33_2=y
+# CT_LIBC_UCLIBC_V_0_9_33_1 is not set
+# CT_LIBC_UCLIBC_V_0_9_33 is not set
+# CT_LIBC_UCLIBC_V_0_9_32_1 is not set
+# CT_LIBC_UCLIBC_V_0_9_32 is not set
+# CT_LIBC_UCLIBC_V_0_9_31 is not set
+# CT_LIBC_UCLIBC_V_0_9_30_3 is not set
+# CT_LIBC_UCLIBC_V_0_9_30_2 is not set
+# CT_LIBC_UCLIBC_V_0_9_30_1 is not set
+# CT_LIBC_UCLIBC_V_0_9_30 is not set
+# CT_LIBC_UCLIBC_CUSTOM is not set
+CT_LIBC_UCLIBC_0_9_32_or_later=y
+CT_LIBC_UCLIBC_0_9_30_or_later=y
+CT_LIBC_UCLIBC_PARALLEL=y
+CT_LIBC_UCLIBC_VERBOSITY_0=y
+# CT_LIBC_UCLIBC_VERBOSITY_1 is not set
+# CT_LIBC_UCLIBC_VERBOSITY_2 is not set
+CT_LIBC_UCLIBC_VERBOSITY=""
+CT_LIBC_UCLIBC_DEBUG_LEVEL_0=y
+# CT_LIBC_UCLIBC_DEBUG_LEVEL_1 is not set
+# CT_LIBC_UCLIBC_DEBUG_LEVEL_2 is not set
+# CT_LIBC_UCLIBC_DEBUG_LEVEL_3 is not set
+CT_LIBC_UCLIBC_DEBUG_LEVEL=0
+CT_LIBC_UCLIBC_CONFIG_FILE="${UCLIBC_CONFIG}"
+CT_LIBC_SUPPORT_THREADS_ANY=y
+CT_LIBC_SUPPORT_THREADS_NATIVE=y
+CT_LIBC_SUPPORT_THREADS_LT=y
+CT_LIBC_SUPPORT_THREADS_NONE=y
+
+#
+# Common C library options
+#
+CT_THREADS_NATIVE=y
+# CT_THREADS_LT is not set
+# CT_THREADS_NONE is not set
+CT_LIBC_XLDD=y
+
+#
+# uClibc other options
+#
+CT_LIBC_UCLIBC_LNXTHRD=""
+# CT_LIBC_UCLIBC_LOCALES is not set
+CT_LIBC_UCLIBC_WCHAR=y
+CT_LIBC_UCLIBC_FENV=y
+
+#
 # C compiler
 #
 CT_CC="gcc"
-CT_CC_VERSION="4.7.3"
+CT_CC_VERSION="4.9.2"
 CT_CC_CORE_PASSES_NEEDED=y
 CT_CC_CORE_PASS_1_NEEDED=y
 CT_CC_CORE_PASS_2_NEEDED=y
 CT_CC_gcc=y
 # CT_CC_GCC_SHOW_LINARO is not set
+# CT_CC_V_5_1 is not set
+CT_CC_V_4_9_2=y
+# CT_CC_V_4_9_1 is not set
+# CT_CC_V_4_9_0 is not set
+# CT_CC_V_4_8_4 is not set
+# CT_CC_V_4_8_3 is not set
+# CT_CC_V_4_8_2 is not set
 # CT_CC_V_4_8_1 is not set
 # CT_CC_V_4_8_0 is not set
-CT_CC_V_4_7_3=y
+# CT_CC_V_4_7_4 is not set
+# CT_CC_V_4_7_3 is not set
 # CT_CC_V_4_7_2 is not set
 # CT_CC_V_4_7_1 is not set
 # CT_CC_V_4_7_0 is not set
@@ -332,8 +416,10 @@ CT_CC_GCC_4_3_or_later=y
 CT_CC_GCC_4_4_or_later=y
 CT_CC_GCC_4_5_or_later=y
 CT_CC_GCC_4_6_or_later=y
-CT_CC_GCC_4_7=y
 CT_CC_GCC_4_7_or_later=y
+CT_CC_GCC_4_8_or_later=y
+CT_CC_GCC_4_9=y
+CT_CC_GCC_4_9_or_later=y
 CT_CC_GCC_HAS_GRAPHITE=y
 CT_CC_GCC_USE_GRAPHITE=y
 CT_CC_GCC_HAS_LTO=y
@@ -344,6 +430,7 @@ CT_CC_GCC_HAS_LNK_HASH_STYLE=y
 CT_CC_GCC_USE_GMP_MPFR=y
 CT_CC_GCC_USE_MPC=y
 CT_CC_GCC_HAS_LIBQUADMATH=y
+CT_CC_GCC_HAS_LIBSANITIZER=y
 # CT_CC_LANG_FORTRAN is not set
 CT_CC_SUPPORT_CXX=y
 CT_CC_SUPPORT_FORTRAN=y
@@ -351,6 +438,7 @@ CT_CC_SUPPORT_JAVA=y
 CT_CC_SUPPORT_ADA=y
 CT_CC_SUPPORT_OBJC=y
 CT_CC_SUPPORT_OBJCXX=y
+CT_CC_SUPPORT_GOLANG=y
 
 #
 # Additional supported languages:
@@ -360,6 +448,7 @@ CT_CC_LANG_CXX=y
 # CT_CC_LANG_ADA is not set
 # CT_CC_LANG_OBJC is not set
 # CT_CC_LANG_OBJCXX is not set
+# CT_CC_LANG_GOLANG is not set
 CT_CC_LANG_OTHERS=""
 
 #
@@ -367,7 +456,7 @@ CT_CC_LANG_OTHERS=""
 #
 CT_CC_ENABLE_CXX_FLAGS=""
 CT_CC_CORE_EXTRA_CONFIG_ARRAY=""
-CT_CC_EXTRA_CONFIG_ARRAY="--enable-targets=powerpc64"
+CT_CC_EXTRA_CONFIG_ARRAY=""
 CT_CC_STATIC_LIBSTDCXX=y
 # CT_CC_GCC_SYSTEM_ZLIB is not set
 
@@ -378,7 +467,7 @@ CT_CC_STATIC_LIBSTDCXX=y
 #
 # Settings for libraries running on target
 #
-# CT_CC_GCC_ENABLE_TARGET_OPTSPACE is not set
+CT_CC_GCC_ENABLE_TARGET_OPTSPACE=y
 # CT_CC_GCC_LIBMUDFLAP is not set
 # CT_CC_GCC_LIBGOMP is not set
 # CT_CC_GCC_LIBSSP is not set
@@ -397,65 +486,10 @@ CT_CC_GCC_LNK_HASH_STYLE_DEFAULT=y
 # CT_CC_GCC_LNK_HASH_STYLE_GNU is not set
 # CT_CC_GCC_LNK_HASH_STYLE_BOTH is not set
 CT_CC_GCC_LNK_HASH_STYLE=""
-
-#
-# C-library
-#
-CT_LIBC="uClibc"
-CT_LIBC_VERSION="0.9.33.2"
-# CT_LIBC_eglibc is not set
-# CT_LIBC_glibc is not set
-CT_LIBC_uClibc=y
-CT_LIBC_eglibc_AVAILABLE=y
-CT_LIBC_glibc_AVAILABLE=y
-CT_LIBC_mingw_AVAILABLE=y
-CT_LIBC_newlib_AVAILABLE=y
-CT_LIBC_none_AVAILABLE=y
-CT_LIBC_uClibc_AVAILABLE=y
-CT_LIBC_UCLIBC_V_0_9_33_2=y
-# CT_LIBC_UCLIBC_V_0_9_33_1 is not set
-# CT_LIBC_UCLIBC_V_0_9_33 is not set
-# CT_LIBC_UCLIBC_V_0_9_32_1 is not set
-# CT_LIBC_UCLIBC_V_0_9_32 is not set
-# CT_LIBC_UCLIBC_V_0_9_31 is not set
-# CT_LIBC_UCLIBC_V_0_9_30_3 is not set
-# CT_LIBC_UCLIBC_V_0_9_30_2 is not set
-# CT_LIBC_UCLIBC_V_0_9_30_1 is not set
-# CT_LIBC_UCLIBC_V_0_9_30 is not set
-# CT_LIBC_UCLIBC_CUSTOM is not set
-CT_LIBC_UCLIBC_0_9_32_or_later=y
-CT_LIBC_UCLIBC_0_9_30_or_later=y
-CT_LIBC_UCLIBC_PARALLEL=y
-CT_LIBC_UCLIBC_VERBOSITY_0=y
-# CT_LIBC_UCLIBC_VERBOSITY_1 is not set
-# CT_LIBC_UCLIBC_VERBOSITY_2 is not set
-CT_LIBC_UCLIBC_VERBOSITY=""
-CT_LIBC_UCLIBC_DEBUG_LEVEL_0=y
-# CT_LIBC_UCLIBC_DEBUG_LEVEL_1 is not set
-# CT_LIBC_UCLIBC_DEBUG_LEVEL_2 is not set
-# CT_LIBC_UCLIBC_DEBUG_LEVEL_3 is not set
-CT_LIBC_UCLIBC_DEBUG_LEVEL=0
-CT_LIBC_UCLIBC_CONFIG_FILE="${UCLIBC_CONFIG}"
-CT_LIBC_SUPPORT_THREADS_ANY=y
-CT_LIBC_SUPPORT_NPTL=y
-CT_LIBC_SUPPORT_LINUXTHREADS=y
-CT_LIBC_SUPPORT_THREADS_NONE=y
-CT_THREADS="nptl"
-
-#
-# Common C library options
-#
-CT_THREADS_NPTL=y
-# CT_THREADS_LINUXTHREADS is not set
-# CT_THREADS_NONE is not set
-CT_LIBC_XLDD=y
-
-#
-# uClibc other options
-#
-CT_LIBC_UCLIBC_LNXTHRD=""
-# CT_LIBC_UCLIBC_LOCALES is not set
-CT_LIBC_UCLIBC_WCHAR=y
+CT_CC_GCC_DEC_FLOAT_AUTO=y
+# CT_CC_GCC_DEC_FLOAT_BID is not set
+# CT_CC_GCC_DEC_FLOAT_DPD is not set
+# CT_CC_GCC_DEC_FLOATS_NO is not set
 
 #
 # Debug facilities
@@ -481,7 +515,16 @@ CT_GDB_GDBSERVER_STATIC=y
 # gdb version
 #
 # CT_DEBUG_GDB_SHOW_LINARO is not set
-CT_GDB_V_7_4_1=y
+# CT_GDB_V_7_9_1 is not set
+# CT_GDB_V_7_9 is not set
+# CT_GDB_V_7_8_2 is not set
+# CT_GDB_V_7_8_1 is not set
+# CT_GDB_V_7_8 is not set
+CT_GDB_V_7_7_1=y
+# CT_GDB_V_7_7 is not set
+# CT_GDB_V_7_6_1 is not set
+# CT_GDB_V_7_5_1 is not set
+# CT_GDB_V_7_4_1 is not set
 # CT_GDB_V_7_4 is not set
 # CT_GDB_V_7_3_1 is not set
 # CT_GDB_V_7_3a is not set
@@ -494,19 +537,24 @@ CT_GDB_V_7_4_1=y
 CT_GDB_7_2_or_later=y
 CT_GDB_7_0_or_later=y
 CT_GDB_HAS_PKGVERSION_BUGURL=y
+CT_GDB_HAS_PYTHON=y
 CT_GDB_INSTALL_GDBINIT=y
-CT_GDB_VERSION="7.4.1"
+CT_GDB_VERSION="7.7.1"
 CT_DEBUG_ltrace=y
-CT_LTRACE_V_0_5_3=y
+CT_LTRACE_V_0_7_3=y
+# CT_LTRACE_V_0_5_3 is not set
 # CT_LTRACE_V_0_5_2 is not set
-CT_LTRACE_VERSION="0.5.3"
-CT_LTRACE_0_5_3_or_later=y
+CT_LTRACE_VERSION="0.7.3"
 CT_DEBUG_strace=y
-CT_STRACE_V_4_6=y
+# CT_STRACE_V_4_10 is not set
+CT_STRACE_V_4_9=y
+# CT_STRACE_V_4_8 is not set
+# CT_STRACE_V_4_7 is not set
+# CT_STRACE_V_4_6 is not set
 # CT_STRACE_V_4_5_20 is not set
 # CT_STRACE_V_4_5_19 is not set
 # CT_STRACE_V_4_5_18 is not set
-CT_STRACE_VERSION="4.6"
+CT_STRACE_VERSION="4.9"
 
 #
 # Companion libraries
@@ -514,54 +562,50 @@ CT_STRACE_VERSION="4.6"
 CT_COMPLIBS_NEEDED=y
 CT_GMP_NEEDED=y
 CT_MPFR_NEEDED=y
-CT_PPL_NEEDED=y
+CT_ISL_NEEDED=y
 CT_CLOOG_NEEDED=y
 CT_MPC_NEEDED=y
 CT_COMPLIBS=y
 CT_GMP=y
 CT_MPFR=y
-CT_PPL=y
+CT_ISL=y
 CT_CLOOG=y
 CT_MPC=y
 CT_LIBELF_TARGET=y
+CT_GMP_V_6_0_0=y
+# CT_GMP_V_5_1_3 is not set
 # CT_GMP_V_5_1_1 is not set
 # CT_GMP_V_5_0_2 is not set
 # CT_GMP_V_5_0_1 is not set
-CT_GMP_V_4_3_2=y
+# CT_GMP_V_4_3_2 is not set
 # CT_GMP_V_4_3_1 is not set
 # CT_GMP_V_4_3_0 is not set
-CT_GMP_VERSION="4.3.2"
-# CT_MPFR_V_3_1_2 is not set
+CT_GMP_5_0_2_or_later=y
+CT_GMP_VERSION="6.0.0a"
+CT_MPFR_V_3_1_2=y
 # CT_MPFR_V_3_1_0 is not set
 # CT_MPFR_V_3_0_1 is not set
 # CT_MPFR_V_3_0_0 is not set
-CT_MPFR_V_2_4_2=y
+# CT_MPFR_V_2_4_2 is not set
 # CT_MPFR_V_2_4_1 is not set
 # CT_MPFR_V_2_4_0 is not set
-CT_MPFR_VERSION="2.4.2"
-CT_PPL_V_0_11_2=y
-# CT_PPL_V_0_11_1 is not set
-# CT_PPL_V_0_11 is not set
-# CT_PPL_V_0_10_2 is not set
-CT_PPL_VERSION="0.11.2"
-CT_PPL_0_11=y
-CT_PPL_NEEDS_LIBPWL=y
-# CT_CLOOG_V_0_15_11 is not set
-CT_CLOOG_V_0_15_10=y
-# CT_CLOOG_V_0_15_9 is not set
-# CT_CLOOG_V_0_15_8 is not set
-# CT_CLOOG_V_0_15_7 is not set
-# CT_CLOOG_V_0_15_6 is not set
-CT_CLOOG_VERSION="0.15.10"
-CT_CLOOG_0_15_1x=y
-CT_CLOOG_NEEDS_AUTORECONF=y
-CT_MPC_V_1_0_1=y
+CT_MPFR_VERSION="3.1.2"
+# CT_ISL_V_0_14 is not set
+CT_ISL_V_0_12_2=y
+# CT_ISL_V_0_11_1 is not set
+CT_ISL_VERSION="0.12.2"
+CT_CLOOG_V_0_18_1=y
+# CT_CLOOG_V_0_18_0 is not set
+CT_CLOOG_VERSION="0.18.1"
+CT_CLOOG_0_18_or_later=y
+CT_MPC_V_1_0_2=y
+# CT_MPC_V_1_0_1 is not set
 # CT_MPC_V_1_0 is not set
 # CT_MPC_V_0_9 is not set
 # CT_MPC_V_0_8_2 is not set
 # CT_MPC_V_0_8_1 is not set
 # CT_MPC_V_0_7 is not set
-CT_MPC_VERSION="1.0.1"
+CT_MPC_VERSION="1.0.2"
 
 #
 # libelf version needed to build for target
@@ -584,6 +628,7 @@ CT_LIBELF_VERSION="0.8.13"
 #
 CT_COMP_TOOLS=y
 CT_COMP_TOOLS_make=y
+# CT_COMP_TOOLS_make_gmake is not set
 CT_COMP_TOOLS_m4=y
 CT_COMP_TOOLS_autoconf=y
 CT_COMP_TOOLS_automake=y
