Accton AS6700_32X: set uboot_max_size in onie-rom.conf
``uboot_max_size`` was restricted since the commit 6868614.  It has
to specify the maximal size or it would be failed during generating
the .bin image.

The u-boot size in AS6700_32X is 557,872 bytes (around 545 KiB).

Signed-off-by: Curt Brune <curt@cumulusnetworks.com>

--- a/machine/accton/accton_as6700_32x/onie-rom.conf
+++ b/machine/accton/accton_as6700_32x/onie-rom.conf
@@ -8,6 +8,7 @@ description="Accton, AS6700_32X"
 format=ubootenv_onie
 
 uimage_max_size=$(( 8 * 1024 * 1024 ))
+uboot_max_size=$(( 545 * 1024 ))
 
 # CONFIG_ENV_SECT_SIZE set in u-boot config
 #env_sector_size=0x00010000
