--- a/machine/accton/accton_as7710_32x/onie-rom.conf
+++ b/machine/accton/accton_as7710_32x/onie-rom.conf
@@ -10,6 +10,7 @@ format=ubootenv_onie
 uboot_machine=AS7710_32X
 
 uimage_max_size=$(( 13 * 1024 * 1024 ))
+uboot_max_size=$(( 768 * 1024 ))
 
 # CONFIG_ENV_SECT_SIZE set in u-boot config
 #env_sector_size=0x00010000
