--- a/machine/accton/accton_as7512_32x/installer.conf
+++ b/machine/accton/accton_as7512_32x/installer.conf
@@ -2,18 +2,27 @@
 
 description="Accton, as7512_32x"
 
+mass_dev="storage-not-found"
+discover_mass_storage()
+{
+    mass_bus="$1"
+    for i in a b c d e ; do
+        if $(ls -l /sys/block/sd$i/device 2>/dev/null | grep -q "$mass_bus") ; then
+            mass_dev="/dev/sd$i"
+            return 0
+        fi
+    done
+    return 1
+}
+
 # Default ONIE block device
 install_device_platform()
 {
-    eusb_bus="1-1.4:1.0"
-    eusb_dev=/dev/sdz
-    for i in a b c d e ; do
-        if $(ls -l /sys/block/sd$i 2>/dev/null | grep -q "$eusb_bus") ; then
-            eusb_dev=/dev/sd$i
-            break
-        fi
-    done
-    echo $eusb_dev
+    discover_mass_storage "1-1.4:1.0" ||
+    discover_mass_storage "target4:0:0"
+    ret=$?
+    echo "$mass_dev"
+    return $ret
 }
 
 # Local Variables:
