Update 3.2.y kernel default configs
Commit 40393fd3e80ebaf76d39ef8cf5df0cf8fdea1dc2 introduced two new
kernel configuration options for the Inventec D6254QS and Inventec
DCS7032Q28 machines.

Unfortunately this breaks other machines that do not define a setting
for these new options.

This patch marks these new options as 'not set' by default.  Machines
that want to use these options must set them in their local
kernel/config file.  The Inventec machines are doing this already.

--- a/build-config/conf/kernel/3.2.69/linux.powerpc-softfloat.config
+++ b/build-config/conf/kernel/3.2.69/linux.powerpc-softfloat.config
@@ -1387,6 +1387,7 @@ CONFIG_BCMA_POSSIBLE=y
 # CONFIG_EZX_PCAP is not set
 # CONFIG_MFD_TIMBERDALE is not set
 # CONFIG_LPC_SCH is not set
+# CONFIG_LPC_ICH is not set
 # CONFIG_MFD_RDC321X is not set
 # CONFIG_MFD_JANZ_CMODIO is not set
 # CONFIG_MFD_VX855 is not set
