--- a/build-config/conf/kernel/3.2.69/linux.x86_64.config
+++ b/build-config/conf/kernel/3.2.69/linux.x86_64.config
@@ -1292,6 +1292,7 @@ CONFIG_GPIO_SYSFS=y
 # CONFIG_GPIO_GENERIC_PLATFORM is not set
 # CONFIG_GPIO_IT8761E is not set
 # CONFIG_GPIO_SCH is not set
+# CONFIG_GPIO_ICH is not set
 # CONFIG_GPIO_VX855 is not set
 
 #
@@ -1511,6 +1512,7 @@ CONFIG_BCMA_POSSIBLE=y
 # CONFIG_MFD_CS5535 is not set
 # CONFIG_MFD_TIMBERDALE is not set
 # CONFIG_LPC_SCH is not set
+# CONFIG_LPC_ICH is not set
 # CONFIG_MFD_RDC321X is not set
 # CONFIG_MFD_JANZ_CMODIO is not set
 # CONFIG_MFD_VX855 is not set
