Added DOCKER_SHELL and DOCKER_INTERACTION overrides docker defaults
Laying the ground work for autobuilds.

--- a/tools/docker/Makefile
+++ b/tools/docker/Makefile
@@ -25,9 +25,13 @@ all: docker_run
 docker_build: docker_check
 	$(DOCKER) build -t opennetworklinux/onl-build:$(IMAGE) .
 
+DOCKER_SHELL='$(ONL)/tools/docker/docker_shell.sh'
+DOCKER_INTERACTIVE=-i
+
 docker_run: docker_check
 	$(DOCKER) pull opennetworklinux/onl-build:$(IMAGE)
-	$(DOCKER) run --privileged -t -i \
+	$(DOCKER) run --privileged -t \
+	$(DOCKER_INTERACTIVE) \
         -e USER=root \
         -e ONL=$(ONL) \
         -e MAKE_UID=`id -u` \
@@ -37,7 +41,7 @@ docker_run: docker_check
         -h "onl-builder" \
         $(SSH_AGENT) \
         opennetworklinux/onl-build:$(IMAGE) \
-        bash -c '$(ONL)/tools/docker/docker_shell.sh'
+        bash -c $(DOCKER_SHELL)
 
 # DANGER - destructively kills all containers and images - DO NOT USE
 docker_nuke_all: docker_check
