--- a/machine/accton/accton_as6712_32x/installer.conf
+++ b/machine/accton/accton_as6712_32x/installer.conf
@@ -5,15 +5,15 @@ description="Accton, as6712_32x"
 # Default ONIE block device
 install_device_platform()
 {
-    eusb_bus="1-1.4:1.0"
-    eusb_dev=/dev/sdz
+    mass_bus="1-1.4:1.0"
     for i in a b c d e ; do
-        if $(ls -l /sys/block/sd$i 2>/dev/null | grep -q "$eusb_bus") ; then
-            eusb_dev=/dev/sd$i
-            break
+        if $(ls -l /sys/block/sd$i/device 2>/dev/null | grep -q "$mass_bus") ; then
+            echo "/dev/sd$i"
+            return 0
         fi
     done
-    echo $eusb_dev
+    echo "storage-not-found"
+    return 1
 }
 
 # Local Variables:
