--- a/components/all/vendor-config/wnc/deb/debuild/debian/rules
+++ b/components/all/vendor-config/wnc/deb/debuild/debian/rules
@@ -1,42 +1,23 @@
+#!/usr/bin/make -f
 ############################################################
 # <bsn.cl fy=2013 v=onl>
-#
-#        Copyright 2013, 2014 Big Switch Networks, Inc.
-#
+# 
+#        Copyright 2013, 2014 Big Switch Networks, Inc.       
+# 
 # Licensed under the Eclipse Public License, Version 1.0 (the
 # "License"); you may not use this file except in compliance
 # with the License. You may obtain a copy of the License at
-#
+# 
 #        http://www.eclipse.org/legal/epl-v10.html
-#
+# 
 # Unless required by applicable law or agreed to in writing,
 # software distributed under the License is distributed on an
 # "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
 # either express or implied. See the License for the specific
 # language governing permissions and limitations under the
 # License.
-#
+# 
 # </bsn.cl>
 ############################################################
-#
-# These are the platforms to include in this installer build.
-#
-############################################################
-INSTALLER_PLATFORMS :=  x86-64-dell-s6000-s1220-r0 \
-			x86-64-dell-s4000-c2338-r0 \
-			x86-64-quanta-ly6-rangeley-r0 \
-			x86-64-quanta-ly8-rangeley-r0 \
-			x86-64-accton-as5712-54x-r0 \
-			x86-64-accton-as7512-32x-r0 \
-			x86-64-accton-as7712-32x-r0 \
-			x86-64-accton-as6712-32x-r0 \
-			x86-64-wnc-sst1-n1-r0
-
-
-
-
-
-
-
-
-
+VENDOR_NAME=wnc
+include $(ONL)/make/vendor-config-rules.mk
