add btrfs kernel support and btrf-progs utilities
Enable btrfs support in the 4.1.x kernel series.

Add the btrfs-progs utilities to the sysroot.

The btrfs-progs are installed by default for x86_64 systems.

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -322,6 +322,9 @@ endif
 ifeq ($(GRUB_ENABLE),yes)
   include make/grub.make
 endif
+ifeq ($(BTRFS_PROGS_ENABLE),yes)
+  include make/btrfs-progs.make
+endif
 ifeq ($(UEFI_ENABLE),yes)
   include make/efivar.make
   include make/efibootmgr.make
