[im_n29xx_t40n] s/niagra/niagara/g
Interface Masters switches product family name is Niagara.

Signed-off-by: Vitaliy Ivanov <vitaliyi@interfacemasters.com>

--- a/machine/imt/im_n29xx_t40n/installer.conf
+++ b/machine/imt/im_n29xx_t40n/installer.conf
@@ -1,6 +1,6 @@
-# Interface Masters Niagra 29XX Series
+# Interface Masters Niagara 29XX Series
 
-description="Interface Masters Niagra 29XX Series"
+description="Interface Masters Niagara 29XX Series"
 
 # Default ONIE block device
 install_device_platform()
