grub: support menu entry chainload NOS
The patch has been tested in Accton AS7716_32X with the following
features:

- demo Diag
- demo OS
- install
- rescue
- uninstall
- update
- embed
- recovery ISO
- PC BIOS
- UEFI

The ONIE's GRUB menu looks like:

                         GNU GRUB  version 2.02~beta2+e4a1fe391

     +----------------------------------------------------------------------------+
     |*Demo OS chainload                                                          |
     | ONIE: Install OS                                                           |
     | ONIE: Rescue                                                               |
     | ONIE: Uninstall OS                                                         |
     | ONIE: Update ONIE                                                          |
     | ONIE: Embed ONIE                                                           |
     | Demo DIAG                                                                  |
     |                                                                            |
     |                                                                            |
     |                                                                            |
     |                                                                            |
     |                                                                            |
     +----------------------------------------------------------------------------+

          Use the ^ and v keys to select which entry is highlighted.
          Press enter to boot the selected OS, `e' to edit the commands
          before booting or `c' for a command-line.

--- a/installer/x86_64/grub/grub-common.cfg
+++ b/installer/x86_64/grub/grub-common.cfg
@@ -127,6 +127,17 @@ elif [ "$onie_mode" = "diag" ] ; then
    reset_onie_mode
 fi
 
+function insert_nos_menuentry {
+  # Do nothing
+  return 0
+}
+
+if [ -r "/onie/grub/nos-bootcmd.cfg" ] ; then
+  configfile /onie/grub/nos-bootcmd.cfg
+fi
+
+insert_nos_menuentry
+
 menuentry "$onie_menu_install" {
   onie_install
 }
