Add woth ipmitool build. build command example: make -j4 MACHINEROOT=../machine/wnc MACHINE=wnc_sst1_n1 ipmitool. This tool also needs open some kernel configs to support IPMI_SI and IPMI_DEVINTF. Also add libc configs, UCLIBC_USE_NETLINK=y and UCLIBC_SUPPORT_AI_ADDRCONFIG=y

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -343,6 +343,9 @@ ifeq ($(FLASHROM_ENABLE),yes)
 endif
 include make/images.make
 include make/demo.make
+ifeq ($(IPMITOOL_ENABLE),yes)
+  include make/ipmitool.make
+endif
 
 #-------------------------------------------------------------------------------
 #
