--- a/build-config/conf/uclibc/0.9.33.2/uclibc.x86_64.config
+++ b/build-config/conf/uclibc/0.9.33.2/uclibc.x86_64.config
@@ -141,7 +141,8 @@ UCLIBC_HAS_SOCKET=y
 UCLIBC_HAS_IPV4=y
 UCLIBC_HAS_IPV6=y
 # UCLIBC_HAS_RPC is not set
-# UCLIBC_USE_NETLINK is not set
+UCLIBC_USE_NETLINK=y
+UCLIBC_SUPPORT_AI_ADDRCONFIG=y
 # UCLIBC_HAS_BSD_RES_CLOSE is not set
 UCLIBC_HAS_COMPAT_RES_STATE=y
 # UCLIBC_HAS_EXTRA_COMPAT_RES_STATE is not set
