--- a/machine/wnc/wnc_sst1_n1/busybox/conf/config
+++ b/machine/wnc/wnc_sst1_n1/busybox/conf/config
@@ -1,7 +1,6 @@
 CONFIG_SYS_EEPROM=y
-CONFIG_SYS_EEPROM_DEVICE_I2C=y
-CONFIG_SYS_EEPROM_I2C_DEVICE="/dev/i2c-0"
-CONFIG_SYS_EEPROM_I2C_ADDR=0x50
+CONFIG_SYS_EEPROM_SYSFS_FILE=y
+CONFIG_SYS_EEPROM_SYSFS_FILE_PATH="/dev/onie-info"
 CONFIG_SYS_EEPROM_OFFSET=0
-CONFIG_SYS_EEPROM_SIZE=512
-CONFIG_SYS_EEPROM_MAX_SIZE=512
+CONFIG_SYS_EEPROM_SIZE=2048
+CONFIG_SYS_EEPROM_MAX_SIZE=2048
