Add switch silicon vendor string to the image discovery default paths
During image discovery, ONIE looks for installer names in the
following order:

1.  onie-installer-<cpu_arch>-<hw_vendor>_<machine>-r<machine_revision>
2.  onie-installer-<cpu_arch>-<hw_vendor>_<machine>
3.  onie-installer-<hw_vendor>_<machine>
4.  onie-installer-<cpu_arch>
5.  onie-installer

With the advent of ONIE enabled systems supporting multiple switch
silicon vendors, step 4 has become ambiguous.

This patch adds an additional step to the ONIE waterfall that includes
the switch silicon vendor.  In the above waterfall this new step would
be between steps 3 and 4.  The new step looks like:

  onie-installer-<cpu_arch>-<switch_silicon_vendor>

Before the change the kvm_x86_64 machine waterfall discovery looks
like this:

<cpu_arch>            = x86_64
<hw_vendor>_<machine> = kvm_x86_64

Info: Fetching http://10.0.2.2/onie-installer-x86_64-kvm_x86_64-r0 ...
Info: Fetching http://10.0.2.2/onie-installer-x86_64-kvm_x86_64 ...
Info: Fetching http://10.0.2.2/onie-installer-kvm_x86_64 ...
Info: Fetching http://10.0.2.2/onie-installer-x86_64 ...
Info: Fetching http://10.0.2.2/onie-installer ...

After the changing, using a completely fictitious silicon vendor, the
waterfall looks like:

<switch_silicon_vendor> = qemu

Info: Fetching http://10.0.2.2/onie-installer-x86_64-kvm_x86_64-r0 ...
Info: Fetching http://10.0.2.2/onie-installer-x86_64-kvm_x86_64 ...
Info: Fetching http://10.0.2.2/onie-installer-kvm_x86_64 ...
Info: Fetching http://10.0.2.2/onie-installer-x86_64-qemu ...
Info: Fetching http://10.0.2.2/onie-installer-x86_64 ...
Info: Fetching http://10.0.2.2/onie-installer ...

Technically the same information is contained in step #3
"onie-installer-<hw_vendor>_<machine>", however the new file name is
more generic and will be easier for customers to maintain when using
multiple platforms.

Imagine the case of a customer who has multiple x86 hardware platforms,
from different hardware vendors, usi

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -181,6 +181,9 @@ ifneq ($(filter-out gpt msdos, $(PARTITION_TYPE)),)
   $(error Supported partition types: gpt, msdos)
 endif
 
+# Switch ASIC vendor, should be set in machine.make
+SWITCH_ASIC_VENDOR ?= unknown
+
 TREE_STAMP  = $(STAMPDIR)/tree
 tree-stamp: $(TREE_STAMP)
 $(TREE_STAMP): $(PROJECT_STAMP)
