Add usb to i2c chip driver. And fix some description and blank space with onie-syseeprom-rw-wnc.patch.

--- a/machine/wnc/wnc_sst1_n1/kernel/config
+++ b/machine/wnc/wnc_sst1_n1/kernel/config
@@ -9,3 +9,4 @@ CONFIG_IPMI_SI=y
 # CONFIG_IPMI_POWEROFF is not set
 # CONFIG_SENSORS_IBMAEM is not set
 # CONFIG_SENSORS_IBMPEX is not set
+CONFIG_I2C_MCP2221=y
