--- a/contrib/oce/config/alphanetworks_snx60a0_486f.json
+++ b/contrib/oce/config/alphanetworks_snx60a0_486f.json
@@ -3,6 +3,7 @@
     "mac_address": "94:de:80:aa:f2:e1",
     "ip_cidr": "192.168.1.102/24",
     "options": {
+        "onie_switch_asic": "bcm",
         "onie_machine": "snx60a0_486f",
         "onie_machine_rev": 0,
         "onie_vendor": "alphanetworks",
