firmware updates: add infra for building firmware updates
The primary goal here is to provide a relatively easy mechanism for
machine maintainers to generate a "firmware update" for their
machines.

A firmware update shares many properties with an ONIE update image as
implemented previously in commits
a8e712b451dce0f40c8a9ce117922be758ba9a38 and
477cd471415102466ee86226263eb4a5c23a9ec3:

  commit a8e712b451dce0f40c8a9ce117922be758ba9a38
  Author: Curt Brune <curt@cumulusnetworks.com>
  Date:   Tue Jun 30 10:56:47 2015 -0700

      pending firmware update discovery mechanism

  commit 477cd471415102466ee86226263eb4a5c23a9ec3
  Author: Curt Brune <curt@cumulusnetworks.com>
  Date:   Mon Jul 13 14:39:38 2015 -0700

      x86 firmware update: add onie-fwpkg CLI tool

The secondary goal is to treat ONIE update images and firmware update
images in a similar fashion.

This patch introduces a new Makefile variable, FIRMWARE_UPDATE_ENABLE,
that machine maintainers set to "yes" in their machine.make file.
When set, this enables a new Makefile target "firmware-update" that
generates a firmware update image based on machine specific files.

When firmware updates are enabled, the following files must exist in
the machine's "firmware" directory, a new sub-directory of the
platform specific directory (the same directory as the machine.make
file):

  platform/machine.make
  platform/firmware/fw-version.make
  platform/firmware/fw-install.sh

fw-version.make -- this is small Makefile fragment that defines the
firmware update version by setting the FW_VERSION variable.  This
version is a free form string up to the machine maintainer.

fw-install.sh -- this is the firmware update entry point shell script,
provided by the machine maintainer.  The firmware update
infrastructure calls this script to start the firmware update process.

What fw-install.sh does is completely up to the machine maintainer.

The platform/firmware/ directory can contain additional files and
directories, dependi

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -354,6 +354,12 @@ endif
 include make/images.make
 include make/demo.make
 
+# By default do not enable building firmware updates
+FIRMWARE_UPDATE_ENABLE ?= no
+ifeq ($(FIRMWARE_UPDATE_ENABLE),yes)
+  include make/firmware-update.make
+endif
+
 #-------------------------------------------------------------------------------
 #
 # top level targets
